# commentwave

./: LICENSE.md  README.md  pnpm-lock.yaml  pnpm-workspace.yaml  todo
app/: package.json  pnpm-lock.yaml
app/src/: global.css
app/src/components/: layout.tsx
app/src/libs/: atoms.ts
app/src/pages/: _app.tsx  index.tsx
backend/: .env.example  Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: index.ts  main.ts  socket.ts  utils.ts
backend/src/models/: Room.ts  RoomMsg.ts  User.ts  coms.ts
backend/src/routes/: auth.ts  room.ts
coms-app/: next.config.js  package.json  pnpm-lock.yaml
coms-app/src-tauri/: Cargo.toml  tauri.conf.json
coms-app/src/pages/: index.tsx
frontend/: .gitignore  next.config.js  package.json
frontend/src/: constants.js  global.css
frontend/src/components/: BrandIcon.tsx  BrandLogo.tsx  Button.tsx  CardLayout.tsx  CenterLayout.tsx  CommonFooter.tsx  CommonHeader.tsx  FormCheck.tsx  (+9 more)
player/: .eslintrc.json  .gitignore  .prettierrc.js  next.config.js  package.json  tsconfig.json
player/src/: constants.js
player/src-tauri/: Cargo.toml  tauri.conf.json
server/: .env.example  Dockerfile  fly.toml  package.json  pnpm-lock.yaml  remix.config.js  tailwind.config.js  tsconfig.json
server/app/: entry.client.tsx  entry.server.tsx  root.tsx
server/prisma/: schema.prisma
server/server/: index.ts  socket.ts
web/: .gitignore  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
web/app/: head.tsx  layout.tsx  page.tsx
web/app.bak/: root.tsx
web/public/: robots.txt
(+21 files in other folders)
